--- a/week2/mr.joker/package.json
+++ b/week2/mr.joker/package.json
@@ -9,23 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "ai": "^3.1.0",
-    "@ai-sdk/react": "^1.0.0",
-    "@ai-sdk/openai": "^1.0.0",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "zod": "^3.22.4"
+    "@ai-sdk/google": "^1.1.25",
+    "@ai-sdk/openai": "^1.2.5",
+    "@ai-sdk/react": "^1.1.23",
+    "ai": "^4.1.61",
+    "framer-motion": "^12.5.0",
+    "next": "15.2.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.2",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
